XL Release/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xl-release-deployment
  namespace: xl-release
  labels:
    app: xl-release 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: xl-release 
  template:
    metadata:
      labels:
        app: xl-release 
    spec:
      volumes:
        - name: xl-release-vols
          persistentVolumeClaim:
            claimName: xl-release-pvc
      containers:
        - name: xl-release
          image: xebialabs/xl-release
          ports:
          - containerPort: 5516
          volumeMounts:
            - name: xl-release-vols
              mountPath: /opt/xebialabs/xl-release-server/conf
              subPath: conf
            - name: xl-release-vols
              mountPath: /opt/xebialabs/xl-release-server/hotfix/
              subPath: hotfix
            - name: xl-release-vols
              mountPath: /opt/xebialabs/xl-release-server/ext/
              subPath: ext  
            - name: xl-release-vols
              mountPath: /opt/xebialabs/xl-release-server/plugins/
              subPath: xl-release-vols
            - name: xl-release-vols
              mountPath: /opt/xebialabs/xl-release-server/repository/
              subPath: repository
            - name: xl-release-vols
              mountPath: /opt/xebialabs/xl-release-server/archive/
              subPath: archive
            - name: xl-release-vols
              mountPath: /opt/xebialabs/xl-release-server/reports/
              subPath: reports
      nodeSelector:
        disktype: ssd8
