XL Release/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-xl-release
  namespace: xl-release
spec:
  selector:
    app: xl-release
  ports:
    - protocol: TCP
      port: 5516
  type: ClusterIP
